; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/bhnd/nvram/extr_bhnd_nvram_data.c_bhnd_nvram_data_getvar_ptr.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/bhnd/nvram/extr_bhnd_nvram_data.c_bhnd_nvram_data_getvar_ptr.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.bhnd_nvram_data = type { %struct.TYPE_2__* }
%struct.TYPE_2__ = type { {}* }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @bhnd_nvram_data_getvar_ptr(%struct.bhnd_nvram_data* %0, i8* %1, i64* %2, i32* %3) #0 {
  %5 = alloca %struct.bhnd_nvram_data*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i64*, align 8
  %8 = alloca i32*, align 8
  store %struct.bhnd_nvram_data* %0, %struct.bhnd_nvram_data** %5, align 8
  store i8* %1, i8** %6, align 8
  store i64* %2, i64** %7, align 8
  store i32* %3, i32** %8, align 8
  %9 = load %struct.bhnd_nvram_data*, %struct.bhnd_nvram_data** %5, align 8
  %10 = getelementptr inbounds %struct.bhnd_nvram_data, %struct.bhnd_nvram_data* %9, i32 0, i32 0
  %11 = load %struct.TYPE_2__*, %struct.TYPE_2__** %10, align 8
  %12 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %11, i32 0, i32 0
  %13 = bitcast {}** %12 to i8* (%struct.bhnd_nvram_data*, i8*, i64*, i32*)**
  %14 = load i8* (%struct.bhnd_nvram_data*, i8*, i64*, i32*)*, i8* (%struct.bhnd_nvram_data*, i8*, i64*, i32*)** %13, align 8
  %15 = load %struct.bhnd_nvram_data*, %struct.bhnd_nvram_data** %5, align 8
  %16 = load i8*, i8** %6, align 8
  %17 = load i64*, i64** %7, align 8
  %18 = load i32*, i32** %8, align 8
  %19 = call i8* %14(%struct.bhnd_nvram_data* %15, i8* %16, i64* %17, i32* %18)
  ret i8* %19
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
